--- a/index.html
+++ b/index.html
@@ -399,13 +399,13 @@
                 </a>
 
                 
-                    <a href="https://github.com/Hanswust16" class="waves-effect waves-light btn" target="_blank">
+                    <a href="https://github.com/Chenchaol16" class="waves-effect waves-light btn" target="_blank">
                         <i class="fab fa-github-alt"></i>Github
                     </a>
                 
             </div>
             <div class="cover-social-link">
-    <a href="https://github.com/Hanswust16" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub" data-position="top" data-delay="50">
+    <a href="https://github.com/Chenchaol16" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub" data-position="top" data-delay="50">
         <i class="fab fa-github"></i>
     </a>
 
